Replace Stream.toList() with Collectors.toList() for JDK 11 compatibility