@@ -372,7 +372,7 @@ public class SdkSymbolResolver implements SymbolResolver {
 
   @Override
   public List<String> getAllNoticeSubtypeIds() {
-    return noticeTypesById.keySet().stream().map(String::toUpperCase).sorted().toList();
+    return noticeTypesById.keySet().stream().map(String::toUpperCase).sorted().collect(Collectors.toList());
   }
 
   protected HashMap<String, SdkField> indexFieldsByAlias() {
